# ParkAI-max

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  License.md  README.md  install_cmake_3.24.sh  install_cuda_toolkit.sh  install_dependancies.sh  install_onnx_libraries.sh
cmake/: imgui.cmake  raylib.cmake  rlimgui.cmake
include/: CamerasUI.h  app_settings.h  db_manage.h
libdeepvision/: CMakeLists.txt  README.md  build.sh
libdeepvision/camstream/: CMakeLists.txt  README.md
libdeepvision/camstream/include/: camstream.h  gst_parent.h  gst_worker.h
libdeepvision/camstream/src/: camstream.cpp  gst_parent.cpp  gst_worker.cpp  main.cpp
libdeepvision/include/: detector.h  measure_time.h  queue.h  streammuxer.h
libdeepvision/src/: detector.cpp  streammuxer.cpp
psCloudLib/: CMakeLists.txt  README.md
psCloudLib/include/: hostname.h  logs.h  lot.h  pscloud.h  requests.h
psCloudLib/src/: hostname.cpp  logs.cpp  lot.cpp  pscloud.cpp  requests.cpp
src/: CamerasUI.cpp  Main.cpp  db_manage.cpp
